# firecrawl-to-trieve

./: .env.dist  .gitignore  README.md  example_crawl_results_2024-08-20T16-35-59.json  load.py  run_firecrawl.py  suggestions.py
node/: chunks_TRIEVE_DATASET_ID_BASELINE.md  cleaners.js  cleaners.test.js  firecrawl_to_trieve_config.js  jest.config.js  load.js  package-lock.json  package.json  runFirecrawl.js  transform.js  transform.test.js
python/: cleaners.py  load.py  requirements.txt  run_firecrawl.py  transform.py  transform_chunks.py
rust/: Cargo.toml  README.md  chunker_tests.rs  config.rs  lib.rs  main.rs  mendable-ingestion.md  mendable-ingestion_chunks.md
rust/tests/: moby-dick.md  moby-dick_chunks.md  signoz-ingestion.md  signoz-ingestion_chunks.md  test.md  test_chunks.md
